k8s/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: vessel-routing-client-external
  namespace: vesops
spec:
  type: NodePort
  selector:
    app: vessel-routing-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8300
      nodePort: 30830   # accessible at http://<server-ip>:30800
