k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vessel-routing-client
  namespace: vessel-routing
spec:
  selector:
    app: vessel-routing-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
